hzcast-k8s/hazelcast-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hazelcast
  labels:
    name: hazelcast
spec:
  replicas : 1
  template:
    metadata:
      labels:
        name: hazelcast
    spec:
      containers:
      - name: hazelcast
        image: quay.io/pires/hazelcast-kubernetes:3.8_1
        imagePullPolicy: Always
        ports:
        - name: hazelcast
          containerPort: 5701
