hzcast-k8s/deployment-mc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: hazelcast-management-center
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: hazelcast-management-center
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: hazelcast-management-center
  name: hazelcast-management-center
spec:
  replicas: 1
  selector:
    matchLabels:
      run: hazelcast-management-center
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: hazelcast-management-center
    spec:
      containers:
      - image: hazelcast/management-center:latest
        name: hazelcast-management-center
        ports:
        - containerPort: 80
        resources: {}
status: {}
