hzcast-k8s/hazelcast-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hazelcast-ingress
spec:
    backend:
      serviceName: hazelcast
      servicePort: 80
